# ITMO

./: README.md
1 Семестр/: Readme.md
1 Семестр/Алгоритмы и структуры данных/1 Лаба/: 1.1 A+B.py  (+4 more)
1 Семестр/Программирование/: 1.c  10.c  11.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  par.c  par.h
1 Семестр/Цифровая культура/: Readme.md
2 Семестр/: Readme.md
2 Семестр/Алгоритмы и структуры данных/: README.md
2 Семестр/Базы данных/: 2 Лаба.sql  3 Лаба.sql  4 Лаба.sql  6 Лаба.sql
3 Семестр/: Readme.md
3 Семестр/Объектно-ориентированное программирование/: Readme.md
3 Семестр/Операционные системы/: Readme.md  calc.sh  int_lib.sh  log.sh  main.sh  reverse.sh
3 Семестр/Операционные системы/Lab_2/: CMakeLists.txt  Client.cpp  Client.h  Makefile  README.md  Server.cpp  Server.h  c_lib.c  c_lib.h  client.c  client_main.cpp  codes.cpp  codes.h  err_handle.cpp  err_handle.h  errhandle.c  errhandle.h  lib.c  lib.h  main.c  s_proc.c  s_proc.h  scenario  server_main.cpp  server_processes.cpp  server_processes.h  unilib.cpp  unilib.h
3 Семестр/Современные инструменты анализа данных/: Lab_clustering.ipynb  Lab_data_preparing.ipynb  Readme.md
4 Семестр/: Readme.md
4 Семестр/Прикладная математика/: .gitignore  tests_lab1.txt  tools.py
4 Семестр/Технологии программирования/: .gitignore  pom.xml  Отзыв по первой лабе.md
4 Семестр/Физика/: model.py  summary.ipynb
5 Семестр/: Readme.md
5 Семестр/Машинное обучение/: Lab_1.ipynb  Lab_2.ipynb  Lab_3_1.ipynb  Lab_3_2.ipynb  Lab_4.ipynb  Lab_5.ipynb  Lab_6_1.ipynb  Lab_6_2.ipynb  Lab_7_1.ipynb  Lab_7_2.ipynb
(+457 files in other folders)
